add the calling-the-api functionalities

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,6 @@
         </div><!-- End of form-container -->
       </div><!-- End of inner-container -->
     </main>
-    <!-- <script src="./index.js"></script> -->
+    <script src="./index.js"></script>
   </body>
 </html>
