add final retouches on my page

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>LeaderBoard</title>
   </head>
   <body>
-    <h1>LeaderBoard</h1>
+    <h1 class="logo">LeaderBoard</h1>
     <main class="main-content">
       <div class="inner-container">
         <div class="scores-section">
