added the final touches

--- a/src/index.html
+++ b/src/index.html
@@ -17,23 +17,22 @@
           </div>
           <ul class="scores-list">
           </ul>
-        </div><!-- End of scores-section -->
-
+        </div>
         <div class="form-container">
           <form id="add-score">
             <h3 class="form-title">Add your score</h3>
             <div class="form-input-group">
               <label for="name"></label>
-              <input type="text" id="name" name="name" class="form-input" placeholder="Add name here...">
+              <input type="text" id="name" name="name" class="form-input" placeholder="Add name here..."  required>
             </div>
             <div class="form-input-group">
               <label for="score"></label>
-              <input type="number" id="score" name="score" class="form-input" placeholder="Add score here...">
+              <input type="number" id="score" name="score" class="form-input" placeholder="Add score here..." required>
             </div>
             <button type="submit" id="submit-score" class="submit-button">Submit</button>
           </form>
-        </div><!-- End of form-container -->
-      </div><!-- End of inner-container -->
+        </div>
+      </div>
     </main>
     <script src="./index.js"></script>
   </body>
